media queries to fix background on mobile

--- a/client/src/components/landingpage/landingpage.css
+++ b/client/src/components/landingpage/landingpage.css
@@ -14,3 +14,10 @@
     text-align: center;
     width: 20px;
 }
+
+@media screen and (max-width: 560px) {
+    /* start of phone styles */
+    .main-landingpage {
+        height: 100%;
+    }
+}
