--- a/client/src/components/projects/projects.css
+++ b/client/src/components/projects/projects.css
@@ -1,3 +1,10 @@
 .main-projects {
     height: 100vh;
 }
+
+@media screen and (max-width: 560px) {
+    /* start of phone styles */
+    .main-projects {
+        height: 100%;
+    }
+}
